# advent-of-code-2021

./: LICENSE  README.md  pyproject.toml
projects/day1/: day1.ipynb
projects/day10/: day10.ipynb
projects/day11/: day11.ipynb
projects/day12/: day12.ipynb
projects/day13/: day13.ipynb
projects/day14/: day14.ipynb
projects/day15/: day15.ipynb
projects/day16/: day16.ipynb
projects/day17/: day_17.ipynb
projects/day18/: day18.ipynb
projects/day19/: day19.ipynb
projects/day2/: day2.ipynb
projects/day20/: day20.ipynb
projects/day21/: day21.ipynb
projects/day22/: day22.ipynb
projects/day23/: day23 - Gravitar64.ipynb  day23.ipynb
projects/day24/: Day24 - SwampThingTom.ipynb  day24.ipynb
projects/day25/: day25.ipynb
projects/day3/: day3.ipynb
projects/day4/: day4.ipynb
projects/day5/: day5.ipynb
projects/day6/: day6.ipynb
projects/day7/: day7.ipynb
projects/day8/: day8.ipynb
projects/day9/: day9.ipynb
