
[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = "Advent of Code 2021"
authors = ["dmcauslan"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
